--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "web.js",
   "dependencies": {
     "axios": "^0.24.0",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "handlebars": "^4.7.7",
     "hbs": "^4.1.2"
   },
   "devDependencies": {},
   "scripts": {
-    "start":"node src/app.js"
+    "start": "node src/app.js",
+    "dev":"env-cmd nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
